fix(scss): unify vertical spacing between stacked fieldsets with legends
Steps:
- Change `margin-bottom` from `4rem` to `6.4rem` in `.form__column > .fieldset:not(:last-of-type)` at `md` breakpoint
- Add override for 3+ fieldset children to use `margin-bottom: 6.4rem` at `lg` breakpoint, matching top-level section spacing

Reason:
- Fieldsets with legends inside `.form__column` have the same visual weight as top-level sections but had inconsistent vertical spacing when stacked in mobile (4rem or 2.4rem vs 6.4rem)

References:
- Issue #445

--- a/src/sass/components/_components-form.scss
+++ b/src/sass/components/_components-form.scss
@@ -47,7 +47,7 @@
 
 				@include media("md") {
 					margin-right: 0;
-					margin-bottom: 4rem;
+					margin-bottom: 6.4rem;
 				}
 			}
 		}
@@ -70,6 +70,15 @@
 				@include media("lg") {
 					margin-right: 0;
 					margin-bottom: 2.4rem;
+				}
+			}
+		}
+
+		> .fieldset:first-child:nth-last-child(n + 3),
+		> .fieldset:first-child:nth-last-child(n + 3) ~ .fieldset {
+			&:not(:last-of-type) {
+				@include media("lg") {
+					margin-bottom: 6.4rem;
 				}
 			}
 		}
